logs/Slang/generated/hdlconv/hdlconvertor_p847.sv.log
name: hdlconvertor_p847
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p847.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p847.sv:6:1: error: expected member
specify
^~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p847.sv:8:1: error: expected member
(in2 => q) = (2, 3) ;
^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p847.sv:9:1: error: expected member
(s *> q) = 1;
^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p847.sv:10:1: error: expected member
endspecify
^~~~~~~~~~
